--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RGU - Sem4 Routine</title>
 
+    <link rel="shortcut icon" href="./public/favicon.png" type="image/x-icon" />
+
     <link rel="stylesheet" href="./css/global.css" />
   </head>
 
