--UPDATED: Data is now being fetched dynamicaly from app.js(routineData)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <th>2:30 - 3:30</th>
           <th>3:30 - 4:30</th>
         </tr>
-        <tr>
+        <tr class="content__dynamic">
           <th>Monday</th>
           <td></td>
           <td></td>
@@ -34,7 +34,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr class="content__dynamic">
           <th>Tuesday</th>
           <td></td>
           <td></td>
@@ -44,7 +44,7 @@
           <td>JLD</td>
           <td></td>
         </tr>
-        <tr>
+        <tr class="content__dynamic">
           <th>Wednesday</th>
           <td>JLD</td>
           <td></td>
@@ -54,7 +54,7 @@
           <td>AS</td>
           <td>LS</td>
         </tr>
-        <tr>
+        <tr class="content__dynamic">
           <th>Thursday</th>
           <td></td>
           <td></td>
@@ -64,7 +64,7 @@
           <td></td>
           <td></td>
         </tr>
-        <tr>
+        <tr class="content__dynamic">
           <th>Friday</th>
           <td></td>
           <td></td>
