--UPDATED: Updated the classes in js

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
           <td></td>
         </tr>
       </table>
+      <button class="button__show-math">Show Math</button>
     </div>
 
     <script src="./app.js"></script>
